# CMakeList.txt : CMakeProject2 の CMake プロジェクト。ソースを含めて、次を定義します:
# プロジェクト専用ロジックはこちらです。
#
cmake_minimum_required (VERSION 3.8)

# ソースをこのプロジェクトの実行可能ファイルに追加します。
add_executable (EnbeddedClangSample "EnbeddedClangSample.c" "EnbeddedClangSample.h")

if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET EnbeddedClangSample PROPERTY CXX_STANDARD 20)
endif()

# TODO: テストを追加し、必要な場合は、ターゲットをインストールします。
